# Subsynth3

./: Cargo.toml  DOCUMENTATION.md  README.md  bundler.toml
.github/workflows/: build.yml  docs.yml  readme-Linux.txt  readme-Windows.txt  readme-macOS.txt  test.yml
nih_plug_derive/tests/: params.rs  persist.rs
nih_plug_vizia/assets/: theme.css  widgets.css
nih_plug_vizia/src/: assets.rs
plugins/subsynth/: Cargo.toml
plugins/subsynth/src/: editor.rs  envelope.rs  filter.rs  lib.rs  modulator.rs  waveform.rs
src/: util.rs
src/wrapper/: util.rs
src/wrapper/vst3/: util.rs
